--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "^49.0.21",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
