--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "1.6.4",
     "axios": "^1.6.2",
     "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.29",
+    "expo-image": "~1.13.0",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
