--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-super-grid": "^6.0.1",
     "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
